--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -14,7 +14,8 @@
     "start": "bun run dist/index.js"
   },
   "dependencies": {
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "pocketflow": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
