--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "commander": "^12.0.0",
     "pocketflow": "^1.0.4",
-    "@hami-frameworx/core": "0.1.1"
+    "@hami-frameworx/core": "0.1.1",
+    "@tbc-frameworx/tbc-fs": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
