--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -17,7 +17,8 @@
     "commander": "^12.0.0",
     "pocketflow": "^1.0.4",
     "@hami-frameworx/core": "0.1.1",
-    "@tbc-frameworx/tbc-fs": "workspace:*"
+    "@tbc-frameworx/tbc-fs": "workspace:*",
+    "@tbc-frameworx/tbc-core": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
