feat(cli): add init command for TBC companion initialization
- Implement `tbc init` command to create directory structure (tbc/, vault/, dex/)
- Add operations to copy specs and tools from assets to TBC structure
- Generate initial tbc/root.md template with default content
- Integrate validation after initialization
- Update documentation and CLI package configuration to support assets distribution

This introduces a streamlined way to set up new TBC companions, replacing manual steps with a single command.

--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -26,5 +26,6 @@
   },
   "keywords": [],
   "author": "",
-  "types": "./dist/index.d.ts"
+  "types": "./dist/index.d.ts",
+  "files": ["assets"]
 }
