--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "cli:dev": "bun run --cwd apps/tbc-cli dev",
-    "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm install -g .",
+    "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm link",
     "all:build": "bun run --filter=\"@tbc-frameworx/*\" build",
     "all:clean": "rm -rf apps/*/dist packages/*/dist",
     "node_modules:clean": "rm -rf apps/*/node_modules packages/*/node_modules"
