refactor(record-fs): rename tbc-fs package to tbc-record-fs
Rename the file system operations package from "tbc-fs" to "tbc-record-fs" to better reflect its focus on record-based file system interactions. This includes updating all imports, references in documentation, build scripts, and moving the package directory. No functional changes were made, only structural renaming for clarity.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "cli:dev": "bun run --cwd apps/tbc-cli dev",
     "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm link",
-    "fs:build": "bun run --cwd packages/tbc-fs build",
+    "record-fs:build": "bun run --cwd packages/tbc-record-fs build",
     "all:build": "bun run --filter=\"@tbc-frameworx/*\" build",
     "all:clean": "rm -rf apps/*/dist packages/*/dist",
     "node_modules:clean": "rm -rf apps/*/node_modules packages/*/node_modules"
