--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "scripts": {
     "cli:dev": "bun run --cwd apps/tbc-cli dev",
     "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm link",
+    "core:build": "bun run --cwd packages/tbc-core build",
     "record-fs:build": "bun run --cwd packages/tbc-record-fs build",
-    "all:build": "bun run --filter=\"@tbc-frameworx/*\" build",
+    "all:build": "bun run record-fs:build && bun run core:build && bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
     "all:clean": "rm -rf apps/*/dist packages/*/dist",
     "node_modules:clean": "rm -rf apps/*/node_modules packages/*/node_modules"
   },
