feat(cli): add refresh core command with supporting operations
- Introduce `tbc refresh core` CLI command to replace shell script for updating core definitions
- Add `RefreshCoreFlow` in tbc-core for orchestrating fetch and write operations
- Implement `WriteCoreNode` to collate and write system definitions to dex/core.md
- Enhance tbc-record-fs with `FetchAllIdsNode` for retrieving all record IDs from collections
- Update `FetchRecordsNode` to include full content and filename in results
- Update documentation and dependencies to support the new functionality

BREAKING CHANGE: Refresh core logic moved from shell script to CLI command, requiring users to use `tbc refresh core` instead of `./tbc/tools/refresh-core.sh

--- a/packages/tbc-core/package.json
+++ b/packages/tbc-core/package.json
@@ -11,7 +11,8 @@
     "dev": "bun run build"
   },
   "dependencies": {
-    "@hami-frameworx/core": "0.1.1"
+    "@hami-frameworx/core": "0.1.1",
+    "pocketflow": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
