--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -18,7 +18,8 @@
     "pocketflow": "^1.0.4",
     "@hami-frameworx/core": "0.1.1",
     "@tbc-frameworx/tbc-record-fs": "workspace:*",
-    "@tbc-frameworx/tbc-core": "workspace:*"
+    "@tbc-frameworx/tbc-core": "workspace:*",
+    "@tbc-frameworx/tbc-generator": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
