--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm link",
     "core:build": "bun run --cwd packages/tbc-core build",
     "record-fs:build": "bun run --cwd packages/tbc-record-fs build",
-    "all:build": "bun run record-fs:build && bun run core:build && bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
+    "generator:build": "bun run --cwd packages/tbc-generator build",
+    "all:build": "bun run record-fs:build && bun run generator:build && bun run core:build && bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
     "all:clean": "rm -rf apps/*/dist packages/*/dist",
     "node_modules:clean": "rm -rf apps/*/node_modules packages/*/node_modules"
   },
