feat(kilocode): add Kilo Code integration plugin and CLI commands
- Introduce new `@tbc-frameworx/tbc-kilocode` package for generating Kilo Code modes configuration
- Add `tbc int kilocode core` CLI command to generate core interface
- Extend `tbc-record-fs` to support YAML file storage
- Update build scripts and dependencies for the new package
- Enhance documentation with Kilo Code integration details

BREAKING CHANGE: None, as this adds new functionality without altering existing behavior.

--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -19,7 +19,8 @@
     "@hami-frameworx/core": "0.1.1",
     "@tbc-frameworx/tbc-record-fs": "workspace:*",
     "@tbc-frameworx/tbc-core": "workspace:*",
-    "@tbc-frameworx/tbc-generator": "workspace:*"
+    "@tbc-frameworx/tbc-generator": "workspace:*",
+    "@tbc-frameworx/tbc-kilocode": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
