feat(goose): add Goose integration support
Add new `tbc-goose` package with operations for generating Goose hints configuration. Integrate into CLI with `tbc int goose core` command to enable Goose AI assistant as TBC companion. Update documentation and build scripts accordingly.

--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -20,7 +20,8 @@
     "@tbc-frameworx/tbc-record-fs": "workspace:*",
     "@tbc-frameworx/tbc-core": "workspace:*",
     "@tbc-frameworx/tbc-generator": "workspace:*",
-    "@tbc-frameworx/tbc-kilocode": "workspace:*"
+    "@tbc-frameworx/tbc-kilocode": "workspace:*",
+    "@tbc-frameworx/tbc-goose": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
