--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "cli:dev": "bun run --cwd apps/tbc-cli dev",
-    "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && npm link",
+    "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && bun link",
     "core:build": "bun run --cwd packages/tbc-core build",
     "record-fs:build": "bun run --cwd packages/tbc-record-fs build",
     "generator:build": "bun run --cwd packages/tbc-generator build",
