--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tbc-frameworx/tbc-cli",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "TBC CLI application",
   "license": "MIT",
   "type": "module",
@@ -17,11 +17,11 @@
     "commander": "^12.0.0",
     "pocketflow": "^1.0.4",
     "@hami-frameworx/core": "0.1.1",
-    "@tbc-frameworx/tbc-record-fs": "workspace:*",
-    "@tbc-frameworx/tbc-core": "workspace:*",
-    "@tbc-frameworx/tbc-generator": "workspace:*",
-    "@tbc-frameworx/tbc-kilocode": "workspace:*",
-    "@tbc-frameworx/tbc-goose": "workspace:*"
+    "@tbc-frameworx/tbc-record-fs": "^0.1.0",
+    "@tbc-frameworx/tbc-core": "^0.1.0",
+    "@tbc-frameworx/tbc-generator": "^0.1.0",
+    "@tbc-frameworx/tbc-kilocode": "^0.1.0",
+    "@tbc-frameworx/tbc-goose": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -30,5 +30,5 @@
   "keywords": [],
   "author": "",
   "types": "./dist/index.d.ts",
-  "files": ["assets"]
+  "files": ["dist", "assets"]
 }
