feat(cli): add GitHub Copilot integration
- Add new @tbc-frameworx/tbc-github-copilot package for GitHub Copilot operations
- Implement generate-core node to create .github/agents/{companion-slug}.agent.md files
- Update CLI with new 'tbc int github-copilot core' command
- Add generate-role-definition node to tbc-core for standardized role definitions
- Modify existing integration flows (Goose, Kilo Code) to use shared role definition
- Update documentation in user-guide, developer-guide, and tester-guide
- Enhance record-fs store-records to handle frontmatter and directory creation
- Bump CLI version to 0.1.4 and update build scripts

--- a/apps/tbc-cli/package.json
+++ b/apps/tbc-cli/package.json
@@ -21,7 +21,8 @@
     "@tbc-frameworx/tbc-core": "^0.1.0",
     "@tbc-frameworx/tbc-generator": "^0.1.0",
     "@tbc-frameworx/tbc-kilocode": "^0.1.0",
-    "@tbc-frameworx/tbc-goose": "^0.1.0"
+    "@tbc-frameworx/tbc-goose": "^0.1.0",
+    "@tbc-frameworx/tbc-github-copilot": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
