--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "packages/*"
   ],
   "scripts": {
+    "cli:build": "bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
     "cli:dev": "bun run --cwd apps/tbc-cli dev",
     "cli:install": "bun run --cwd apps/tbc-cli build && cd apps/tbc-cli && bun link",
     "core:build": "bun run --cwd packages/tbc-core build",
@@ -16,7 +17,8 @@
     "generator:build": "bun run --cwd packages/tbc-generator build",
     "kilocode:build": "bun run --cwd packages/tbc-kilocode build",
     "goose:build": "bun run --cwd packages/tbc-goose build",
-    "all:build": "bun run record-fs:build && bun run generator:build && bun run kilocode:build && bun run goose:build && bun run core:build && bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
+    "github-copilot:build": "bun run --cwd packages/tbc-github-copilot build",
+    "all:build": "bun run record-fs:build && bun run generator:build && bun run kilocode:build && bun run goose:build && bun run github-copilot:build && bun run core:build && bun run --filter=\"@tbc-frameworx/tbc-cli\" build",
     "all:clean": "rm -rf apps/*/dist packages/*/dist",
     "node_modules:clean": "rm -rf apps/*/node_modules packages/*/node_modules"
   },
